--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -5,7 +5,7 @@
 
 // TODO: neue Struktur überlegen
 //// 
-Parallel prüfen, was geblieben ist, was neu ist, alle Änderungen dokumentieren. Siehe Aufgaben in Themen/Veranwortung.
+Prüfen, was geblieben ist, was neu ist, alle Änderungen dokumentieren. Siehe Aufgaben in Themen/Veranwortung.
 https://forum.plentymarkets.com/t/changelog-closed-beta/677887/3
 
 1. Übersicht
@@ -74,9 +74,42 @@ Aufträge, die nicht über den Webshop oder einen Marktplatz bei dir eingehen, l
 
 Passe die xref:auftraege:grundeinstellungen.adoc#[Grundeinstellungen] im Menü *Einrichtung » Aufträge » Einstellungen* an, bevor du die ersten Aufträge in deinem plentymarkets System abwickelst. Speichere die Grundeinstellungen auch dann einmalig ab, wenn du die voreingestellten Werte nicht verändert hast.
 
+
+== Grundeinstellungen Aufträge
+// TODO: siehe grundeinstellungen.adoc, plus Warenhauszuordnung und Fallback
+
+Im Menü *Einrichtung » Aufträge » Einstellungen* wählst du die Einstellungen, die für Aufträge automatisch eingestellt werden bzw. bei bestimmten Auftragsstatus oder Bedingungen gelten sollen. Zum Beispiel wählst du Standard-Einstellungen für die Auftragsherkunft und den Status von Aufträgen.
+
+[#important-preconditions]
+== Wichtige Vorbedingungen beachten
+
+Bei neuen Systemen sind Standardstatus eingestellt, z.B. für Retouren der Status [9] und für Gutschriften der Status [11]. Diese Einstellungen sind änderbar. Wähle dazu einen anderen Status. Alternativ legst du im Menü *Einrichtung » Aufträge » Auftragsstatus* einen neuen xref:auftraege:auftraege-verwalten.adoc#1200[Auftragsstatus] an. Ein dort angelegter Status wird hier im Menü *Grundeinstellungen* angezeigt und ist auch als Standardstatus einstellbar.
+// TODO: xref
+
+[IMPORTANT]
+.Grundeinstellungen speichern
+====
+Die Grundeinstellungen des Menüs *Einrichtung » Aufträge » Einstellungen* müssen bei Inbetriebnahme des Systems gespeichert werden, damit die Einstellungen wirksam sind. Speichere daher die Einstellungen auch, wenn du sie nicht verändert hast, also die Standardkonfiguration verwenden möchtest.
+====
+
+[WARNING]
+.Wichtig: Benutzer-Login
+====
+Wenn du in diesem Menü Änderungen vornimmst, werden andere Benutzer:innen automatisch ausgeloggt und müssen sich neu einloggen, damit die Änderungen auch für diese Benutzerprofile greifen. Kündige Änderungen daher ggf. weiteren Benutzer:innen an.
+====
+
 ////
-Grundeinstellungen
-siehe grundeinstellungen.adoc
+Buchhaltung
+siehe buchhaltung.adoc
+siehe auftrage.adoc
+
+Auftragsherkunft
+siehe auftragsherkunft.adoc
+
+Auftragsstatus
+siehe auch grundeinstellungen.adoc
+
+
 
 [#270]
 ==== Auftragsdetails
@@ -91,7 +124,7 @@ Am Warenkorb-Symbol (icon:shopping_cart[set=material]) über der Tabelle wird di
 
 
 
-[#creater-order-or offer]
+[#creater-order-or-offer]
 ==== Auftrag oder Angebot anlegen
 
 Der Auftrag oder das Angebot wird individuell für Kund:innen im Menü *CRM » Kontakte* erstellt. Die Anlage verläuft in drei Schritten. Im ersten Schritt werden Auftragsdetails erfasst, im zweiten Schritt werden Artikel hinzugefügt und im dritten Schritt wird der Auftrag abgeschlossen. Wähle zunächst aus den Kontakten aus, für wen der Auftrag oder das Angebot angelegt werden soll. Gehe dabei wie im Folgenden beschrieben vor.
@@ -111,6 +144,7 @@ Auftrag oder Angebot über Kontakt anlegen:
 Über den Auftragsdetails kannst du aus Dropdown-Liste auch nachträglich zwischen Auftrag und Angebot wählen. Zudem kannst du optional eine xref:auftraege:auftraege-verwalten.adoc#295[Auftragsvorlage] aus der Dropdown-Liste auswählen, die auf diesen Auftrag angewendet werden soll. In der Standardeinstellung ist hier keine Auftragsvorlage ausgewählt.
 
 Die im Folgenden beschriebenen Schritte sind für Auftrag und Angebot gleich.
+// TODO: siehe angebot.adoc
 
 Die Ansichten der neuen Benutzeroberfläche sind so gestaltet, dass sich Aufträge schnell und übersichtlich anlegen lassen. Dies ist vor allem bei der telefonischen Aufnahme von Bestellungen von Vorteil. Zunächst werden die Auftragsdetails wie z.B. Adressen oder die Zahlungsart abgefragt. Danach werden dem Auftrag Artikel hinzugefügt, um ihn im letzten Schritt zu überprüfen und anzulegen.
 
@@ -119,12 +153,14 @@ include::{includedir}/_header.adoc[]
 
 Die Detailansicht eines Auftrags enthält alle relevanten Auftragsinformationen. Diese Informationen sind thematisch in Portlets angeordnet. Über die MyView Funktionalität kannst du die Portlets selbst und auch ihre Anordnung in der Detailansicht individuell einrichten. Das bedeutet, dass du selbst bestimmen kannst, welche Auftragsinformationen und damit verbundene Funktionen für dich am wichtigsten sind. Gestalte deine Auftragsbearbeitung effizienter, indem du dir eigene Ansichten einrichtest. Wie du dabei vorgehst, wird auf dieser Seite erklärt.
 
-[#customize-ui]
+// TODO: MyView als Include einfügen
+
+[#customise-ui]
 == Benutzeroberfläche anpassen
 
 Du öffnest die Detailansicht eines Auftrags von der Auftragsübersicht aus. Gehe ins Menü *Aufträge » Aufträge [Testphase]* und <<LINK#, suche den Auftrag>>, den du öffnen und bearbeiten möchtest.
 Wenn du noch keine eigene Ansicht erstellt hast, wird der Auftrag mit der Standardansicht geöffnet. Du kannst die Standardansicht nutzen, um den Auftrag zu bearbeiten. Wenn du die Detailansicht individuell anpassen möchtest, kannst du eine eigene Ansicht erstellen. In den folgenden Kapiteln wird dir erklärt, wie du dafür vorgehst.
-// TODO: ist in G Doc vorbereitet
+// TODO: Detailansicht ist in G Doc vorbereitet
 
 
 
@@ -1261,7 +1297,7 @@ Retourengründe eingeben:
 [#enter-status-returns]
 === Status für retournierte Artikel eintragen
 
-Du kannst bis zu 12 Artikelstatus anlegen. Die Status kannst du z.B. nutzen, um einerseits den Zustand der retournierten Artikel, aber auch um den Fortschritt beim Bearbeiten der retournierten Artikel anzugeben. Die Status stehen in einer Retoure im Tab *Übersicht* bei den Auftragspositionen zur Wahl. Um je nach Fortschritt der Bearbeitung verschiedene Status zuzuweisen, lege die benötigten Status an. Du kannst Retourenstatus in mehreren Sprachen hinterlegen.
+Du kannst bis zu 12 Artikelstatus anlegen. Die Status kannst du z.B. nutzen, um einerseits den Zustand der retournierten Artikel, aber auch um den Fortschritt beim Bearbeiten der retournierten Artikel anzugeben. Die Status stehen in einer Retoure im Portlet *Übersicht* bei den Auftragspositionen zur Wahl. Um je nach Fortschritt der Bearbeitung verschiedene Status zuzuweisen, lege die benötigten Status an. Du kannst Retourenstatus in mehreren Sprachen hinterlegen.
 
 [.instruction]
 Status für retournierte Artikel eintragen:
@@ -1322,31 +1358,10 @@ include::partial$tabelle-aus-optionen-anlegen.adoc[]
 |Paketcode der Retoure eintragen.
 
 
-2+^| *Artikel*
+|*Status*
+|Wähle einen Status aus der Dropdown-Liste, z.B. Waren auf Zahlung. +
+Diese Spalte ist eine Standardspalte.
 
-| *Artikel-ID*
-|Die Artikel-ID wird angezeigt.
-
-| *Varianten-ID*
-|Die Varianten-ID wird angezeigt.
-
-| *Variantennummer*
-|Die Variantennummer wird angezeigt.
-
-| *Varianten-ID*
-|Die Varianten-ID wird angezeigt.
-
-| *Menge*
-|Die Menge wird als Zahl angezeigt.
-
-| *Verbleibende Menge*
-|Die Verbleibende Menge wird als Zahl angezeigt.
-
-| *Verfügbare Menge*
-|Die Offene/Verfügbare Menge wird als Zahl angezeigt.
-
-| *Name der Auftragsposition/Artikel-Name*
-|Der Name der Auftragsposition wird angezeigt.
 
 // TODO: 2. Tabelle
 
@@ -1393,6 +1408,7 @@ Nachdem eine Retoure erfasst wurde, kannst du den Artikelstatus für retourniert
 |====
 
 // TODO: gehört das hier dazu?
+
 [#create-return-note]
 === Rücksendeschein erstellen
 
@@ -1413,8 +1429,8 @@ Prüfe die Artikelpositionen der Retoure und ändere bei Bedarf die Optionen, z.
 [#order-type-repair]
 == Auftragstyp Reparatur nutzen
 
-Reparaturen werden in plentymarkets durch einen eigenen Auftragstyp abgebildet. Reparaturen bestehen aus retournierter, reparaturbedürftiger Ware. Reparaturaufträge können daher nur aus xref:auftraege:auftraege-verwalten.adoc#400[Retourenaufträgen] angelegt werden.
-// TODO: Linke prüfen
+Reparaturen werden in plentymarkets durch einen eigenen Auftragstyp abgebildet. Reparaturen bestehen aus retournierter, reparaturbedürftiger Ware. Reparaturaufträge können daher nur aus xref:auftraege:auftraege-verwalten.adoc#400[Retourenaufträgen] angelegt werden. Eine Reparatur muss manuell angelegt werden, da jeder Artikel geprüft werden muss.
+// TODO: Link prüfen
 
 [#repair-status]
 === Status für Reparaturen eingeben
@@ -1454,11 +1470,10 @@ Gehe wie beschrieben vor, um eine Reparatur anzulegen:
 
 . Öffne das Menü *Aufträge (Testphase) » Aufträge*.
 . Öffne die Retoure, zu der du eine Reparatur anlegen möchtest.
-. Öffne das Portlet *Allgemein* 
-// TODO: Schritte beschreiben
+// TODO: Schritte beschreiben analog zu Retoure
 
 ////
-?? Schritte kann ich nicht
+prüfen
 . Klicke auf die Dropdown-Liste *Reparatur* und dort auf die Einstellung *anlegen*. + Wo ??
 → Ein Bearbeitungsfenster öffnet sich. Gib den gewünschten *Status* und den *Zustand* der Reparatur an. Wähle die zu reparierenden *Artikel* aus. Gib optional einen *Hinweis* ein.
 . *Speichere* (icon:save[role="green"]) die Einstellungen. +
@@ -1749,7 +1764,7 @@ Im Portlet *Historie* siehst du die Informationen:
 * die ausgeführte Aktion (hier: Neue Gewährleistung und darüber Warenbestandsautomatik) 
 * geänderten Status.
 
-[[table-settings-return]]
+[[table-settings-warranry]]
 .Optionen beim Erfassen einer Gewährleistung
 [cols="1,3"]
 |====
@@ -1765,7 +1780,7 @@ Im Portlet *Historie* siehst du die Informationen:
 
 // TODO: später abgleichen
 | *Versandkosten*
-Wähle, ob die Versandkosten aus dem Hauptauftrag in die Gewährleistung übernommen werden sollen. Die Option, die du für *Versandkosten in Gewährleistung übernehmen* im Menü *Einrichtung » Aufträge » Einstellungen* gespeichert hast, ist voreingestellt. Du kannst die gespeicherte Einstellung anpassen.
+|Wähle, ob die Versandkosten aus dem Hauptauftrag in die Gewährleistung übernommen werden sollen. Die Option, die du für *Versandkosten in Gewährleistung übernehmen* im Menü *Einrichtung » Aufträge » Einstellungen* gespeichert hast, ist voreingestellt. Du kannst die gespeicherte Einstellung anpassen.
 ////
 add the shipping costs to the basket (only for the request / not visible in the basket) if the option is yes
 ////
@@ -1790,7 +1805,7 @@ add the shipping costs to the basket (only for the request / not visible in the 
 
 | *Name der Artikelposition*
 |Die Artikelposition wird angezeigt.
-// TODO: Symbol Warenkorb mit + Symbol - click to add item ???
+// TODO: Symbol Warenkorb mit + Symbol: Klicke auf das Icon, um Artikel in den Warenkorb zu legen.
 
 Cart
 | *Artikel-ID*
@@ -1956,14 +1971,74 @@ Optionen für das Splitten von Aufträgen in Lieferaufträge wählen:
 === Auftrag über einen bestehenden Auftrag anlegen
 
 In einem Auftrag findest du das Symbol *Neuer Auftrag* (icon:plus-square[role="green"]) im Portlet *Übersicht*. Gehe folgendermaßen vor, um einen neuen Auftrag über das Portlet *Übersicht* eines bestehenden Auftrags anzulegen. ...
-// TODO: Text auf neue UI anpassen
+// TODO: Text auf neue UI anpassen am Beispiel Retoure
+
 
 [#create-order-from-offer]
 === Auftrag über ein Angebot anlegen
 
-In einem Auftrag findest du das Symbol *Neuer Auftrag* (icon:plus-square[role="green"]) im Portlet *Übersicht*. Gehe folgendermaßen vor, um einen neuen Auftrag über das Portlet *Übersicht* eines bestehenden Auftrags anzulegen. ...
+In einem Angebot findest du das Symbol *Neuer Auftrag* (icon:plus-square[role="green"]) ... Gehe folgendermaßen vor, um einen neuen Auftrag über ein bestehendes Angebot anzulegen. ...
 // TODO: Text auf neue UI anpassen
 Die Besonderheit ist, dass bei Menge eine beliebige Menge eingegeben werden kann.
+Der *Neue Auftrag* wird dir in der Navigation unter dem Angebot in blauer Schrift angezeigt sowie im Portlet *Auftragsreferenzen*.
+
+[[table-overview-new-order]]
+.Spalten Tabelle Neuer Auftrag
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+|*Status*
+|Wähle einen Status aus der Dropdown-Liste, z.B. Waren auf Zahlung. +
+Diese Spalte ist eine Standardspalte.
+
+|*Eigner*
+|Wähle einen Eigner aus der Dropdown-Liste. +
+Diese Spalte ist eine Standardspalte.
+
+Symbol 3 Striche mit +
+
+// TODO: 2. Tabelle
+ 
+| *Artikel-ID*
+|Die Artikel-ID wird angezeigt.
+ 
+| *Varianten-ID*
+|Die Varianten-ID wird angezeigt.
+ 
+| *Variantennummer*
+|Die Variantennummer wird angezeigt.
+ 
+| *Menge*
+|Die Menge wird angezeigt.
+ 
+| *Verbleibende Stückzahl*
+|Die Verbleibende Stückzahl wird angezeigt.
+ 
+| *Offene Menge*
+|Die Offene Menge wird angezeigt.
+ 
+| *Verfügbarer Warenbestand*
+|Der Verfügbare Warenbestand wird angezeigt.
+ 
+| *Artikelname*
+|Der Artikelname wird angezeigt.
+ 
+Rechts jeweils Warenkorb Symbol mit +
+ 
+darunter
+ 
+| *Artikel-ID*
+|Die Artikel-ID wird angezeigt.
+ 
+| *Varianten-ID*
+|Die Varianten-ID wird angezeigt.
+ 
+| *Menge*
+|Die Menge wird angezeigt.
+Die Menge kann hier verändert werden und beliebig hoch sein.
+|====
+
 
 
 [#create-delivery-order-manually]
