new catalogue pages - EN

--- a/docs/de-de/modules/daten/partials/catalogues-faq.adoc
+++ b/docs/de-de/modules/daten/partials/catalogues-faq.adoc
@@ -20,7 +20,7 @@ include::page$artikel.adoc[tag=faq-array]
 
 include::page$artikel.adoc[tag=faq-import]
 
-
+[.collapseBox]
 .*Unter der Download-URL des Katalogs gibt es keine Datei. Warum?*
 --
 
@@ -35,8 +35,8 @@ include::page$artikel.adoc[tag=faq-import]
 --
 Du hast die Admin-URL verwendet. Du bist aber nicht als Admin im plentymarkets System angemeldet.
 
-1. Melde dich als Admin an.
-2. Generiere eine öffentliche URL. Über diese URL ist die Datei immer erreichbar.
+* *_Möglichkeit 1:_* Melde dich als Admin an.
+* *_Möglichkeit 2:_* Generiere eine öffentliche URL. Über diese URL ist die Datei immer erreichbar.
 --
 
 //tag::rights[]
