--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -237,6 +237,7 @@
 ***** xref:data:formatdesigner-stock.adoc[stock]
 ***** xref:data:formatdesigner-stock-movement.adoc[stockMovement]
 *** xref:data:catalogues.adoc[Catalogues]
+**** xref:daten:catalogues-first-contact.adoc[Getting to know catalogues]
 **** xref:data:export-marketplace-formats.adoc[Using marketplace exports]
 **** xref:data:export-standard-formats.adoc[Using standard formats]
 **** xref:data:catalogue-formats.adoc[Standard formats]
@@ -249,6 +250,7 @@
 ***** xref:data:exporting-stocks.adoc[Stocks]
 ***** xref:data:exporting-stock-movements.adoc[Stock movements]
 ***** xref:data:exporting-payments.adoc[Payments]
+**** xref:data:catalogues-manage.adoc[Managing catalogues]
 ** xref:data:datalog.adoc[Data log]
 ** xref:data:data-cleansing.adoc[Data cleansing]
 ** xref:data:backup.adoc[Database backup]
