--- a/docs/en-gb/modules/data/pages/catalogues.adoc
+++ b/docs/en-gb/modules/data/pages/catalogues.adoc
@@ -2,33 +2,9 @@
 :keywords:
 :description: The *Data » Catalogues* menu allows you to configure data exports.
 :id: VP4I6LM
+:page-aliases: manage-catalogues.adoc
 :author: team-plenty-channel
 
-//tag::catalogue-formats[]
-Catalogues are used to export data from your plentymarkets system. A distinction is made between catalogues with marketplace formats and catalogues with standard formats:
+Catalogues are used to export data from your plentymarkets system. There are catalogues with marketplace formats and catalogues with standard formats.
 
-[cols="1,3a"]
-|====
-| Catalogue format | Explanation
-
-| *Default formats*
-| Use standard formats to *_export data from your plentymarkets system to a CSV, JSON, TXT or XML file_*.
-
-Which standard format you choose depends on the type of data you want to export. For example, to export stock information, use the standard format xref:data:catalogues-stocks.adoc[Stocks]. To export item data, the standard format xref:data:catalogues-item.adoc#[Item] is available.
-
-However, at the moment not all types of data can be exported using catalogues. Until standard formats are available for all types of data, you can still use the xref:exporting-data:FormatDesigner.adoc#[Formatdesigner].
-
-* Find out how to create catalogues with standard formats on the xref:data:file-export.adoc#[Creating standard formats].
-
-| *Marketplace format*
-| The marketplace formats are used to *_export variation data to markets and other sales channels._*
-
-Each sales channel requires different product data. Often, different product information have to be exported to the same sales channel for different product categories (pet food, household items, food, etc.).
-
-A marketplace format provides a framework of the data a sales channel can accept. Catalogues allow you to customise information regarding your product portfolio to meet the requirements of each sales channel and target audience. Currently, you can use catalogues to transfer data to markets such as Etsy, Metro, OTTO Market and Amazon.
-
-* An introduction to marketplace formats lives on the manual page xref:data:marketplace-export.adoc#[Catalogues: Marketplace export].
-* Check the manual pages of xref:markets:markets.adoc#[the individual sales channels] to find out how to create a catalogue for each market.
-
-|====
-//end::catalogue-formats[]
+include::partial$catalogues-faq.adoc[tag=first-page]
