--- a/docs/en-gb/modules/data/partials/catalogues-faq.adoc
+++ b/docs/en-gb/modules/data/partials/catalogues-faq.adoc
@@ -4,7 +4,7 @@
 --
 
 //tag::first-page[]
-* *_You want to export data from plentymarkets to a CSV, JSON, TXT or XML file?
+* *_You want to export data from plentymarkets to a CSV, JSON, TXT or XML file?_*
   ** You need a xref:data:export-standard-formats.adoc#[catalogue with standard format].
 * *_You want to export item data to markets?_*
   ** Use a xref:data:export-marketplace-formats.adoc#[catalogue with marketplace format].
