--- a/docs/en-gb/modules/data/pages/catalogues-manage.adoc
+++ b/docs/en-gb/modules/data/pages/catalogues-manage.adoc
@@ -9,4 +9,4 @@ include::partial$catalogues-manage.adoc[]
 [#faq]
 == FAQ: Questions and answers
 
-include::partial$catalogues-faq.adoc
+include::partial$catalogues-faq.adoc[]
