--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -237,7 +237,7 @@
 ***** xref:data:formatdesigner-stock.adoc[stock]
 ***** xref:data:formatdesigner-stock-movement.adoc[stockMovement]
 *** xref:data:catalogues.adoc[Catalogues]
-**** xref:daten:catalogues-first-contact.adoc[Getting to know catalogues]
+**** xref:data:catalogues-first-contact.adoc[Getting to know catalogues]
 **** xref:data:export-marketplace-formats.adoc[Using marketplace exports]
 **** xref:data:export-standard-formats.adoc[Using standard formats]
 **** xref:data:catalogue-formats.adoc[Standard formats]
