fix links in faq - DE+EN

--- a/docs/en-gb/modules/data/partials/catalogues-faq.adoc
+++ b/docs/en-gb/modules/data/partials/catalogues-faq.adoc
@@ -62,12 +62,12 @@ Users with xref:business-decisions:user-accounts-access.adoc#10[back end access 
 
 No problem:
 
-* xref:data:catalogue-manage.adoc#190[Copy catalogues]
-* xref:data:catalogue-manage.adoc#210[Delete catalogues]
-* xref:data:catalogue-manage.adoc#250[Restore a previous catalogue version]
-* xref:data:catalogue-manage.adoc#240[Restore a deleted catalogue]
-* xref:data:catalogue-manage.adoc#270[Export catalogues]
-* xref:data:catalogue-manage.adoc#280[Import catalogues]
-* xref:data:catalogue-manage.adoc#catalogue-rights[Assign rights for back end users]
+* xref:data:catalogues-manage.adoc#190[Copy catalogues]
+* xref:data:catalogues-manage.adoc#210[Delete catalogues]
+* xref:data:catalogues-manage.adoc#250[Restore a previous catalogue version]
+* xref:data:catalogues-manage.adoc#240[Restore a deleted catalogue]
+* xref:data:catalogues-manage.adoc#270[Export catalogues]
+* xref:data:catalogues-manage.adoc#280[Import catalogues]
+* xref:data:catalogues-manage.adoc#catalogue-rights[Assign rights for back end users]
 --
 //end::faq-manage[]
