--- a/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
@@ -16,7 +16,7 @@ More detailed information about how you create an structure a catalogue can be f
 include::_includes:page$new-page-info-box.adoc[]
 
 [#catalogue-menu]
-== Getting to know the catalogue menu for marketplace formats
+== Understanding the catalogue menu for marketplace formats
 
 include::partial$catalogue-menu.adoc[]
 
